# tracewall-recorder

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  report.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bad_agent_case.yml  bug_report.yml  feature_request.yml
.github/workflows/: tests.yml
agent-demo/: .gitignore  DEMO_SCRIPT.md  README.md  RESULTS.md  master_agent_demo.py
archive/: README.md
archive/agent-demo/: DEMO_SCRIPT.md  README.md  RESULTS.md  master_agent_demo.py  scenario.json
archive/docs/: mcp-proxy.md
archive/examples-mcp-blocked-tool/: README.md  contract.yaml  report.md
archive/knowledge-graph/: README.md  architecture.mmd  graph.json  index.html  module_graph.mmd
archive/src/: orchestration.py  plugins.py  sidecar.py
archive/tests/: test_agent_demo.py  test_mcp_proxy.py  test_mcp_targets.py  test_orchestration.py  test_plugins.py  test_sidecar.py
archive/tools/: knowledge_graph.py
assets/: README.md
docs/: AgentProof-North-Star.pptx  Tracewall-North-Star.pptx  adr-source-of-truth.md  audit-control-plane.md  brand-world.md  business-model.md  claude-code-quickstart.md  codex-quickstart.md  daemon-threat-model.md  examples.md  launch-plan.md  limitations.md  macos-validation.md  mcp-proxy.md  north-star.md  p0-execution-plan.md  quickstart.md  roadmap.md  security-model.md  task-contracts.md  tracewall-business-plan.md  tracewall-design-prompt.md  tracewall-design-qa.md  verification-model.md
knowledge-graph/: index.html
prototypes/: ReviewUI.jsx  tracewall-prototype.html
schema/: agent-action-event.v1.json
tests/: test_agent_demo.py  test_cli_flow.py  test_codex.py  test_contracts.py  test_daemon.py  test_daemon_hardening.py  test_daemon_web.py  test_enforce.py  test_enforcement.py  test_flow.py  test_gateway.py  test_guard.py  test_hook.py  test_insight.py  test_launch_readiness.py  test_local_first.py  test_mcp_proxy.py  test_mcp_targets.py  test_observe.py  test_orchestration.py  test_paths.py  test_plugins.py  test_policy_view.py  test_recommend.py  test_redaction.py  test_review.py  test_schema.py  test_service.py  test_sidecar.py  test_universal_cli.py  test_verifier.py
vscode-extension/: README.md  package.json  tsconfig.json
(+62 files in other folders)
